# Electronics_store_

./: README.md
eletronnics_store/: .coverage  pyproject.toml
eletronnics_store/tests/: .coverage  test_func.py
eletronnics_store/utils/: func.py
product/tests/: test_func.py
