[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["Maria <mararyabina62@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
coverage = "^7.2.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
